Do not package fonts. Closes #1.

--- a/src/styles/carnap.styl
+++ b/src/styles/carnap.styl
@@ -1,6 +1,9 @@
 @font-face
     font-family:"Fira Logic"
-    src:url("../fonts/FiraLogic-Regular.woff") format("woff"), url("../fonts/FiraLogic-Regular.tff") format("tff")
+    src:url("https://cdn.jsdelivr.net/gh/gleachkr/FiraLogic/dist/FiraLogic-Regular.woff") format("woff"), 
+        url("https://cdn.jsdelivr.net/gh/gleachkr/FiraLogic/dist/FiraLogic-Regular.tff") format("tff"),
+        url("https://cdn.jsdelivr.net/gh/gleachkr/FiraLogic/dist/FiraLogic-Regular.otf") format("otf")
+        
 
 h1,h2,h3,h4
     font-family:Fira Sans
