Long day's work

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -55,7 +55,7 @@ img, video
   margin-top -(@height / 2)
   display flex
   flex-direction column
-  align-items center
+  align-items left
   justify-content center
   transition opacity 200ms ease-in-out 150ms
 
